qr_code_encoder/target/rls/debug/build/num-rational-0e14547edeeb2ec5/stderr
error[E0277]: the trait bound `isize: std::fmt::LowerExp` is not satisfied
 --> <anon>:1:42
  |
1 | pub fn probe() { let _ = format!("{:e}", 0_isize); }
  |                                          ^^^^^^^ the trait `std::fmt::LowerExp` is not implemented for `isize`
  |
  = note: required by `std::fmt::LowerExp::fmt`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
